fix: add spacing between definitions

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,3 +1,4 @@
 $grey-color: rgb(224, 224, 224);
 $white-color: white;
-$blue-color: rgb(0, 106, 255)
+$blue-color: rgb(0, 106, 255);
+$definition-color: rgb(85, 85, 85);
