--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -6,8 +6,9 @@
     max-width: 500px;
     @include flex(row, nowrap);
     #input {
-        padding:1rem;
+        padding:1rem 2rem;
         width: 100%;
+        font-size: 2rem;
        
     }
     #submit {
@@ -64,6 +65,20 @@ main {
     #definition-title {
         font-size: 2.3rem;
         margin-bottom: 1.5rem;
+    }
+
+    article {
+        margin-left: 2rem;
+    }
+
+    .definition {
+        font-size: 1.5rem;
+        margin-bottom: 1rem;
+        color:$definition-color;
+
+        &:last-of-type{
+            margin-bottom: 0;
+        }
     }
 }
 
